...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/item_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1" />-->
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:orientation="horizontal"-->
...
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:text = "Select"/>-->
<!--            <Button-->
<!--                android:id="@+id/add_item_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:gravity="end"-->
<!--                android:text="Add" />-->
...
