...
            android:textColor="@color/white">
        </TextView>

    </LinearLayout>

    <ScrollView
        android:id="@+id/show_item_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/button_layout">
    <LinearLayout

...
